--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "backend for my first project",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "dev" : "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -12,5 +12,8 @@
     "backend"
   ],
   "author": "Mandapalli Shanmukha Sai Srinivas",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.11"
+  }
 }
