--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "backend for my first project",
   "main": "index.js",
+  "type":"module",
   "scripts": {
-    "dev" : "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev" : "nodemon src/index.js"
   },
   "keywords": [
     "shannu",
